--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Build the Docker Images
+      - name: Install Docker Compose
         run: |
-         docker-compose build
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
          
       - name: Build the Docker images
         run: docker-compose build
