--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,34 @@
 name: LEMP Server
+
 on:
   push:
     branches:
-   # - src
-    - main
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Install Docker Compose
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Install Docker Compose (v2)
         run: |
-            mkdir -p ~/.docker/cli-plugins/
-            curl -SL https://github.com/docker/compose/releases/download/v2.3.3/docker-compose-linux-x86_64 -o ~/.docker/cli-plugins/docker-compose
-            chmod +x ~/.docker/cli-plugins/docker-compose
-            docker compose version
-         
-      - name: Build the Docker images
-        run: docker-compose build
-        
-      - name: Logging into the Docker Hub
-        uses: docker/login-action@v1
+          mkdir -p ~/.docker/cli-plugins/
+          curl -SL https://github.com/docker/compose/releases/download/v2.3.3/docker-compose-linux-x86_64 \
+            -o ~/.docker/cli-plugins/docker-compose
+          chmod +x ~/.docker/cli-plugins/docker-compose
+          docker compose version
+
+      - name: Build Docker images
+        run: docker compose build   # ✅ no hyphen
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        
-      - name: Push the Docker Images to the Docker Hub
-        run: docker-compose push
+
+      - name: Push Docker images
+        run: docker compose push    # ✅ no hyphen
