--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,8 @@ jobs:
 
       - name: Install Docker Compose (v2)
         run: |
-          mkdir -p ~/.docker/cli-plugins/
-          curl -SL https://github.com/docker/compose/releases/download/v2.3.3/docker-compose-linux-x86_64 \
-            -o ~/.docker/cli-plugins/docker-compose
-          chmod +x ~/.docker/cli-plugins/docker-compose
-          docker compose version
+          sudo apt update
+          sudo apt install docker-compose
 
       - name: Build Docker images
         run: docker compose build   # ✅ no hyphen
