--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     build:
       context: ./.docker/nginx
       dockerfile: Dockerfile
-    image: frehman/nginximages:${TAG}
+    image: afira836/afira-public-repo:1
     ports:
       - 80:80
     volumes:
@@ -22,7 +22,7 @@ services:
     build:
       context: ./.docker/php
       dockerfile: Dockerfile
-    image: frehman/phpimages:${TAG}
+    image: afira836/afira-public-repo:2
     working_dir: /var/www/php
     volumes:
       - ./src:/var/www/php
@@ -34,7 +34,7 @@ services:
     build:
       context: ./.docker/mysql
       dockerfile: Dockerfile
-    image: frehman/mysqlimages:${TAG}
+    image: afira836/afira-public-repo:3
     environment:
       MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
       MYSQL_ROOT_HOST: "%"
@@ -53,7 +53,7 @@ services:
    build:
      context: ./.docker/phpmyadmin
      dockerfile: Dockerfile
-   image: frehman/myadminimages:${TAG}
+   image: afira836/afira-public-repo:4
    environment:
      MYSQL_USERNAME: root
      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
