--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           sudo apt install docker-compose
 
       - name: Build Docker images
-        run: docker compose build   # ✅ no hyphen
+        run: docker compose build   
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
